Fixed banner offsets, nav z-index issue, and fixed iPhone white tel number

--- a/code/styles/elements/_banner.scss
+++ b/code/styles/elements/_banner.scss
@@ -1,5 +1,6 @@
 .banner {
   display: block;
+  margin-top: -7%;
   position: relative;
   z-index: -2;
 }
