--- a/code/styles/modules/_hero-banner.scss
+++ b/code/styles/modules/_hero-banner.scss
@@ -1,6 +1,7 @@
 .hero-banner {
   //margin-bottom: calc(-10vw + #{$padding-vertical-lg};
-  margin-bottom: calc(-10vw + 3%);
+  //margin-bottom: calc(-6vw + -5%);
+  margin-bottom: -5vw;
   position: relative;
   //z-index: 1;
 
